--- a/templates/index.html
+++ b/templates/index.html
@@ -81,25 +81,25 @@
                 <div class="col-md-6">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <a href="/cmnd-tools" class="btn btn-primary">
+                            <a href="/docs#endpoints" class="btn btn-primary">
                                 <i class="fas fa-chart-pie me-2"></i>
                                 Access the main tool interface
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/run-cmnd-tool" class="btn btn-primary">
+                            <a href="/docs#endpoints" class="btn btn-primary">
                                 <i class="fas fa-play-circle me-2"></i>
                                 Trigger the analysis process
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/api/cost-comparison" class="btn btn-primary">
+                            <a href="/docs#endpoints" class="btn btn-primary">
                                 <i class="fas fa-calculator me-2"></i>
                                 Cost Comparison
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/api/property-details" class="btn btn-primary">
+                            <a href="/docs#endpoints" class="btn btn-primary">
                                 <i class="fas fa-building me-2"></i>
                                 Property Details and Insights
                             </a>
